Align with 8.5.x
Code clean-up. i18n improvements, fix SpotBugs warnings, spacing,
refactor to reduce duplication